terminacion de pagina password

--- a/Frontend-developer-1/Clase1.html
+++ b/Frontend-developer-1/Clase1.html
@@ -31,8 +31,7 @@
         }
         .form-container {
             display: grid;
-            grid-template-rows: auto 1fr
-            auto;
+            grid-template-rows: auto 1fr auto;
             width: 300px;
         }
         .logo {
@@ -68,7 +67,6 @@
             border: none;
             border-radius: 8px;
             height: 30px;
-            width: 100%;
             font-size: var(--md);
             padding: 6px;
             margin-bottom: 12px;
@@ -112,7 +110,7 @@
                 <input type="password"
                 id="new-password" placeholder="*********" class="input input-password">  
 
-                <input type="submit" value="Confirm" class="primary-button login-button">
+                <input type="submit" value="Confirm" class="primary-button login-button"> <!--BOTON-->
             </form>
         </div>
     </div>
