--- a/Frontend-developer-1/Clase8.html
+++ b/Frontend-developer-1/Clase8.html
@@ -32,14 +32,23 @@
       font-weight: bold;
       /* margin-bottom: 24px; */
     }
-    .mobile-menu ul {
+    .mobile-menu ul:nth-child(1) {
+      padding: 0;
+      margin-top: 24px;
+      border-bottom: 1px solid var(--very-light-pink);
+      list-style: none;
+    }
+    .mobile-menu ul:nth-child(2) {
+      padding: 0;
+      margin: 24px 0 48px;
+      list-style: none;
+    }
+    .mobile-menu ul:nth-child(3) {
       padding: 0;
       margin: 24px 0 0;
       list-style: none;
     }
-    .mobile-menu ul:nth-child(1) {
-      border-bottom: 1px solid var(--very-light-pink);
-    }
+
     .mobile-menu ul li {
       margin-bottom: 24px;
     }
@@ -88,8 +97,8 @@
       </li>
     </ul>
 
-    <ul>
-      <li>
+    <ul class="footpage">
+      <li">
         <a href="/" class="email">platzi@example.com</a>
       </li>
       <li>
