--- a/Frontend-developer-1/Clase11.html
+++ b/Frontend-developer-1/Clase11.html
@@ -1,7 +1,3 @@
-Terminamos de estructurar el Left, ahora falta estructurar el right
-Me quede en el minuto 11.52 de la clase Numero 19
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,6 +27,7 @@ Me quede en el minuto 11.52 de la clase Numero 19
       display: flex;
       justify-content: space-between;
       padding: 0 24px;
+      border-bottom: 1px solid var(--very-light-pink);
     }
     .menu {
       display: none;
@@ -45,12 +42,12 @@ Me quede en el minuto 11.52 de la clase Numero 19
       margin: 0;
       display: flex;
       align-items: center;
+      height: 60px;
     }
     .left {
       display: flex;
     }
     .left ul {
-      display: flex;
       margin-left: 12px;
     }
     .left ul li a,
@@ -66,6 +63,41 @@ Me quede en el minuto 11.52 de la clase Numero 19
       border: 1px solid var(--hospital-green);
       color: var(--hospital-green);
     }
+    .navbar-email {
+      color: var(--very-light-pink);
+      font-size: var(--sm);
+      margin-right: 12px;
+    }
+    .navbar-shopping-cart {
+      position: relative;
+    }
+    .navbar-shopping-cart div {
+      width: 16px;
+      height: 16px;
+      background-color: var(--hospital-green);
+      border-radius: 50%;
+      font-size: var(--sm);
+      font-weight: bold;
+      position: absolute;
+      top: -6px;
+      right: -3px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    @media (max-width: 640px) {
+      .menu {
+        display: block;
+      }
+      .left ul {
+        display: none;
+      }
+      .navbar-email {
+        display: none;
+      }
+    }
+    
     </style>
 </head>
 <body>
@@ -94,7 +126,7 @@ Me quede en el minuto 11.52 de la clase Numero 19
     <div class="right">
       <ul>
 
-        <li>platzi@example.com</li>
+        <li class="navbar-email">platzi@example.com</li>
 
         <li class="navbar-shopping-cart"> 
           <img src="./icons/icon_shopping_cart.svg" alt="shopping-cart">
